; ModuleID = '/home/carl/AnghaBench/redis/deps/lua/src/extr_lgc.c_removeentry.c'
source_filename = "/home/carl/AnghaBench/redis/deps/lua/src/extr_lgc.c_removeentry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_TDEADKEY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @removeentry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @removeentry(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @gval(i32* %3)
  %5 = call i32 @ttisnil(i32 %4)
  %6 = call i32 @lua_assert(i32 %5)
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @gkey(i32* %7)
  %9 = call i64 @iscollectable(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %1
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @gkey(i32* %12)
  %14 = load i32, i32* @LUA_TDEADKEY, align 4
  %15 = call i32 @setttype(i32 %13, i32 %14)
  br label %16

16:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @lua_assert(i32) #1

declare dso_local i32 @ttisnil(i32) #1

declare dso_local i32 @gval(i32*) #1

declare dso_local i64 @iscollectable(i32) #1

declare dso_local i32 @gkey(i32*) #1

declare dso_local i32 @setttype(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
